--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include LICENSE
 include README.rst
+recursive-include authentication/templates *
 recursive-include keymaster/static *
 recursive-include keymaster/templates *
 recursive-include keymaster/fixtures *
