--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,5 @@
 include LICENSE
 include README.rst
-recursive-include authentication/templates *
-recursive-include keymaster/static *
-recursive-include keymaster/templates *
-recursive-include keymaster/fixtures *
-recursive-include menu/fixtures *
+recursive-include sshkm/templates *
+recursive-include sshkm/static *
+recursive-include sshkm/fixtures *
