--- a/sshkm.conf
+++ b/sshkm.conf
@@ -12,6 +12,7 @@ DATABASES = {
         'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
     }
 }
+#
 # MySQL/MariaDB
 #DATABASES = {
 #    'default': {
@@ -21,7 +22,18 @@ DATABASES = {
 #        'PASSWORD': 'sshkm',
 #    }
 #}
-
+#
+# PostgreSQL
+#DATABASES = {
+#    'default': {
+#        'ENGINE': 'django.db.backends.postgresql_psycopg2',
+#        'NAME': 'sshkm',
+#        'USER': 'sshkm',
+#        'PASSWORD': 'sshkm',
+#        'HOST': 'localhost',
+#        'PORT': '',
+#    }
+#}
 #####
 
 ##### LDAP Settings (optional)
