--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include README.rst
+include README.md
 recursive-include sshkm/templates *
 recursive-include sshkm/static *
 recursive-include sshkm/fixtures *
