--- a/sshkm.conf
+++ b/sshkm.conf
@@ -4,6 +4,11 @@
 # for security reason change this to your hostname/domainname
 ALLOWED_HOSTS = ['*']
 
+##### RabbitMQ Settings
+CELERY_BROKER_URL = 'amqp://'
+CELERY_RESULT_BACKEND = 'rpc'
+#####
+
 ##### Database Settings
 # sqlite
 DATABASES = {
@@ -37,48 +42,43 @@ DATABASES = {
 #####
 
 ##### LDAP Settings (optional)
-import ldap
-from django_auth_ldap.config import LDAPSearch, GroupOfNamesType
-
-# Baseline configuration.
-AUTH_LDAP_SERVER_URI = "ldap://FQDN"
-
-AUTH_LDAP_BIND_DN = "CN=sshkm,OU=Users,DC=example,DC=com"
-AUTH_LDAP_BIND_PASSWORD = "PASSWORD"
-AUTH_LDAP_USER_SEARCH = LDAPSearch("OU=Benutzer,DC=example,DC=com", ldap.SCOPE_SUBTREE, "(uid=%(user)s)")
-# or perhaps:
-# AUTH_LDAP_USER_DN_TEMPLATE = "uid=%(user)s,ou=users,dc=example,dc=com"
-
-# Set up the basic group parameters.
-AUTH_LDAP_GROUP_SEARCH = LDAPSearch("OU=Groups,DC=example,DC=com", ldap.SCOPE_SUBTREE, "(objectClass=groupOfNames)")
-AUTH_LDAP_GROUP_TYPE = GroupOfNamesType()
-
-# Simple group restrictions
-#AUTH_LDAP_REQUIRE_GROUP = "cn=enabled,ou=django,ou=groups,dc=example,dc=com"
-#AUTH_LDAP_DENY_GROUP = "cn=disabled,ou=django,ou=groups,dc=example,dc=com"
-
-# Populate the Django user from the LDAP directory.
-AUTH_LDAP_USER_ATTR_MAP = {
-    "first_name": "givenName",
-    "last_name": "sn",
-    "email": "mail"
-}
-
-AUTH_LDAP_USER_FLAGS_BY_GROUP = {
-    "is_staff": "CN=sshkm-staff,OU=Groups,DC=example,DC=com",
-}
-
-# Use LDAP group membership to calculate group permissions.
-AUTH_LDAP_FIND_GROUP_PERMS = False
-
-# Cache group memberships for an hour to minimize LDAP traffic
-AUTH_LDAP_CACHE_GROUPS = False
-AUTH_LDAP_GROUP_CACHE_TIMEOUT = 3600
-
-# Keep ModelBackend around for per-user permissions and maybe a local
-# superuser.
-AUTHENTICATION_BACKENDS = (
-    'django_auth_ldap.backend.LDAPBackend',
-    'django.contrib.auth.backends.ModelBackend',
-)
+#import ldap
+#from django_auth_ldap.config import LDAPSearch, GroupOfNamesType
+#
+## Baseline configuration.
+#AUTH_LDAP_SERVER_URI = "ldap://FQDN"
+#
+#AUTH_LDAP_BIND_DN = "CN=sshkm,OU=Users,DC=example,DC=com"
+#AUTH_LDAP_BIND_PASSWORD = "PASSWORD"
+#AUTH_LDAP_USER_SEARCH = LDAPSearch("OU=Benutzer,DC=example,DC=com", ldap.SCOPE_SUBTREE, "(uid=%(user)s)")
+## or perhaps:
+## AUTH_LDAP_USER_DN_TEMPLATE = "uid=%(user)s,ou=users,dc=example,dc=com"
+#
+## Set up the basic group parameters.
+#AUTH_LDAP_GROUP_SEARCH = LDAPSearch("OU=Groups,DC=example,DC=com", ldap.SCOPE_SUBTREE, "(objectClass=groupOfNames)")
+#AUTH_LDAP_GROUP_TYPE = GroupOfNamesType()
+#
+## Populate the Django user from the LDAP directory.
+#AUTH_LDAP_USER_ATTR_MAP = {
+#    "first_name": "givenName",
+#    "last_name": "sn",
+#    "email": "mail"
+#}
+#
+#AUTH_LDAP_USER_FLAGS_BY_GROUP = {
+#    "is_staff": "CN=sshkm-staff,OU=Groups,DC=example,DC=com",
+#}
+#
+## Use LDAP group membership to calculate group permissions.
+#AUTH_LDAP_FIND_GROUP_PERMS = False
+#
+## Cache group memberships for an hour to minimize LDAP traffic
+#AUTH_LDAP_CACHE_GROUPS = False
+#AUTH_LDAP_GROUP_CACHE_TIMEOUT = 3600
+#
+## Keep ModelBackend around for per-user permissions and maybe a local superuser.
+#AUTHENTICATION_BACKENDS = (
+#    'django_auth_ldap.backend.LDAPBackend',
+#    'django.contrib.auth.backends.ModelBackend',
+#)
 #####
