--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include README.md
 include sshkm.conf
 include get_production_ready.py
+include post_setup.py
 recursive-include sshkm/templates *
 recursive-include sshkm/static *
 recursive-include sshkm/fixtures *
