--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,5 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-# command to install dependencies
-install: "pip install"
-# command to run tests
+install: "pip install -r requirements.txt"
 script: pytest
