--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
   - "3.5"
   - "3.6"
 install: "pip install -r requirements.txt"
-script: "mkdir -p /etc/sshkm && cp sshkm.conf /etc/sshkm/ && python manage.py test"
+script: "python manage.py test"
