--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
   - "3.5"
   - "3.6"
 install: "pip install -r requirements.txt"
-script: "python manage.py test"
+script: "netstat -vltn && python manage.py test"
