--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+before_install:
+- sudo apt-get update -qq
+- sudo apt-get install -qq netstat
 language: python
 python:
   - "2.7"
@@ -5,4 +8,4 @@ python:
   - "3.5"
   - "3.6"
 install: "pip install -r requirements.txt"
-script: "python manage.py test"
+script: "netstat -vltn; python manage.py test"
