--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -qq netstat
+- sudo apt-get install -qq net-tools
 language: python
 python:
   - "2.7"
@@ -8,4 +8,4 @@ python:
   - "3.5"
   - "3.6"
 install: "pip install -r requirements.txt"
-script: "netstat -vltn; python manage.py test"
+script: "sudo netstat -vltn; python manage.py test"
