--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ python:
   - "3.5"
   - "3.6"
 install: "pip install -r requirements.txt"
-script: "sudo tree /root/; python manage.py test"
+script: "sudo tree /root/; sudo ls -al /; sudo ls -al /root; ip a; iptables -L; python manage.py test"
