--- a/sshkm.conf
+++ b/sshkm.conf
@@ -9,6 +9,11 @@ CELERY_BROKER_URL = 'amqp://'
 CELERY_RESULT_BACKEND = 'rpc'
 #####
 
+##### Session Settings
+#SESSION_EXPIRE_AT_BROWSER_CLOSE = True
+#SESSION_COOKIE_AGE = 5 * 60
+#####
+
 ##### Database Settings
 # sqlite
 DATABASES = {
