move deploy status update to the deploy process

--- a/sshkm.conf
+++ b/sshkm.conf
@@ -4,6 +4,9 @@
 # for security reason change this to your hostname/domainname
 ALLOWED_HOSTS = ['*']
 
+# set your timezone (example: Europe/Vienna)
+TIME_ZONE = 'UTC'
+
 ##### RabbitMQ Settings
 CELERY_BROKER_URL = 'amqp://'
 CELERY_RESULT_BACKEND = 'rpc'
