--- a/sshkm.conf
+++ b/sshkm.conf
@@ -22,7 +22,7 @@ CELERY_RESULT_BACKEND = 'rpc'
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
+        'NAME': os.path.join(BASE_DIR + '/sshkm', 'db.sqlite3'),
     }
 }
 #
