prepare for automated builds

--- a/rpmbuild/SOURCES/sshkm-master/etc/sshkm/sshkm.conf
+++ b/rpmbuild/SOURCES/sshkm-master/etc/sshkm/sshkm.conf
@@ -1,6 +1,8 @@
 # Django settings
 # please read Django documentation for details: https://docs.djangoproject.com
 
+LOGIN_URL = '/sshkm/login/'
+
 # for security reason change this to your hostname/domainname
 ALLOWED_HOSTS = ['*']
 
