make bootstrap search box for datatables

--- a/rpmbuild/SOURCES/sshkm-master/etc/httpd/conf.d/sshkm.conf
+++ b/rpmbuild/SOURCES/sshkm-master/etc/httpd/conf.d/sshkm.conf
@@ -1,4 +1,4 @@
-Alias /static/ /usr/lib/sshkm/lib/python2.7/site-packages/sshkm/static/
+Alias /sshkm/static/ /usr/lib/sshkm/lib/python2.7/site-packages/sshkm/static/
 
 <Directory /usr/lib/sshkm/lib/python2.7/site-packages/sshkm/static/>
   Require all granted
