--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
 include README.md
-include sshkm.conf
+include sshkm.conf.example.example
 recursive-include sshkm/templates *
 recursive-include sshkm/static *
 recursive-include sshkm/fixtures *
